Migration to JDK 17 and Jakarta EE 9.1